tests/bad/modifying_multi_level_pointers.glaz
fn main() {
	let x = 9;
	let y: *i32 = &x;
	let mut v = &y;
	v.*.* = 1;
}
